# ncstate_ece566_spring2022

./: .gitignore  Dockerfile  Dockerfile.travis  LICENSE  README.md  docker-compose.yml  travis-ci-test.sh
LectureCode/Lexer/: Makefile  words  words.lex
LectureCode/Parser/: Makefile  calc  calc.lex  calc.lex.c  calc.y  calc.y.c  calc.y.h
LectureCode/SDT/: Makefile  calc.lex  calc.y
LectureCode/examples/: Makefile  test.ll
projects/p0/: CMakeLists.txt  p0.c  p0.cpp
projects/p1/C/: CMakeLists.txt  Makefile  p1.c  p1.lex  p1.y
projects/p1/C++/: #p1.lex#  CMakeLists.txt  p1.cpp  p1.lex  p1.y
projects/p1/C++/tests/: CMakeLists.txt  fail_1.p1  fail_2.p1  fail_4.p1  flags.c  flags.p1  flip.c  flip.p1  into_ecc.c  into_ecc.p1  llvm-inst-count.cpp  syndrome_ecc.c  syndrome_ecc.p1  test_0.p1  test_1.p1  test_10.p1  test_11.c  test_11.p1  test_12.c  test_12.p1  test_13.c  test_13.p1  test_15.c  test_16.p1  test_17.c  test_17.p1  test_18.c  test_19.p1  test_2.c  test_3.p1  test_5.c  test_5.p1  test_6.c  test_6.p1  test_7.c  test_7.p1  test_8.c  test_9.c  test_9.p1
projects/p1/C/tests/: CMakeLists.txt  fail_3.p1  fail_4.p1  fail_5.p1  flip.p1  generic.c  into_ecc.p1  slice.c  slice.p1  syndrome_ecc.p1  test_0.c  test_1.c  test_10.c  test_10.p1  test_13.p1  test_14.c  test_14.p1  test_15.p1  test_16.c  test_16.p1  test_18.p1  test_19.c  test_2.p1  test_3.c  test_4.c  test_4.p1  test_5.p1  test_6.c  test_6.p1  test_7.p1  test_8.c  test_8.p1
projects/p2/C/: CMakeLists.txt  cse.c  dominance.h  p2.cpp
projects/p2/C++/: CMakeLists.txt  p2.cpp
projects/p2/C++/tests/: CMakeLists.txt  cse1.ll  cse2.ll  cse5.ll
projects/p2/C/tests/: cse0.ll  cse3.ll  cse4.ll  cse6.ll
projects/p3/C/: CMakeLists.txt  licm.c  licm.h  p3.cpp  stats.cpp  stats.h  summary.c
projects/p3/C++/: .#CSE.cpp  CMakeLists.txt  p3.cpp
tutorials/1/: CMakeLists.txt  Makefile  expr.lex  expr.y
tutorials/2/: CMakeLists.txt  Makefile  expr.lex  expr.y
tutorials/3/C/: CMakeLists.txt  dce.c  stats.cpp  stats.h
tutorials/3/C++/: CMakeLists.txt  Makefile  dce.cpp  test0.c  test0.ll
wolfbench/: Make.rules.llvm  Makefile.P1  Makefile.p3  configure  configure.ac  fullstats.py  stats.py  timing.py
wolfbench/Benchmarks/adpcm/: Makefile.in
wolfbench/Benchmarks/arm/: Makefile.in
wolfbench/Benchmarks/bh/: Makefile.in
wolfbench/Benchmarks/bisort/: Makefile.in
wolfbench/Benchmarks/em3d/: Makefile.in
wolfbench/Benchmarks/mst/: Makefile.in
wolfbench/Benchmarks/patricia/: patricia_test.c
wolfbench/Benchmarks/smatrix/: Makefile.in
wolfbench/P1Tests/: Makefile.in  main.c  test_01.data  test_01.p1  test_02.data  test_03.p1  test_04.data  test_04.p1  test_05.data  test_05.p1  test_06.data  test_06.p1  test_07.p1  test_08.data  test_08.p1  test_09.data  test_09.p1  test_10.p1  test_11.data  test_11.p1  test_12.data  test_12.p1  test_13.data  test_13.p1  test_14.data  test_14.p1
wolfbench/P2Tests/: test_03.c  test_05.c  test_06.c  test_07.c  test_08.c  test_08.p2  test_09.c  test_10.c  test_10.p2  test_11.c  test_11.p2  test_12.c  test_12.p2  test_13.c  test_13.p2  test_14.p2
wolfbench/autom4te.cache/: output.0  output.1  requests  traces.0
